--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,22 @@
 @import"./components/container";
 @import"./components/body";
 @import"./components/logo";
-@import"./components/page-header"
+@import"./components/page-header";
+@import"./components/hero";
+@import"./components/modal";
+@import"./components/form";
+@import"./components/section";
+@import"./components/description";
+@import"./components/work";
+@import"./components/team";
+@import"./components/clients";
+@import"./components/footer";
+@import"./components/portfolio";
+@import"./components/portfolio-card";
+
+
+
+
+
+
+
